--- a/feature_selection.ipynb.ipynb
+++ b/feature_selection.ipynb.ipynb
@@ -4442,6 +4442,30 @@
     " 'OROA',\n",
     " 'SHORTTERM_LEVERAGE']"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Final list of remaining (14) features after feature engineering and then feature reduction\n",
+    "\n",
+    "Feature Category  | Feature Name  \n",
+    "------------- | -------------\n",
+    "Solvency Risk  | Total assets \n",
+    "_  | Total revenue \n",
+    "_  | Current liability \n",
+    "_  | Short term leverage\n",
+    "_  | Total equity \n",
+    "_  | Net worth \n",
+    "Operational Ability  | Inventory days \n",
+    "_  | Payable days \n",
+    "_  | Other payroll expenses \n",
+    "Profitability  | Operating profit \n",
+    "_  | Return on equity  \n",
+    "_  | Operating return on assets \n",
+    "Permanent Features  | Country Code \n",
+    "_  | Industry Code "
+   ]
   }
  ],
  "metadata": {
